# api/controllers/employees.js
@@ -1,14 +1,0 @@
-"use strict";
-
-var util = require("util");
-var db = require("../../db/db");
-
-function employees(req, res) {
-  db.employees(function(employees) {
-    res.json(employees);
-  });
-}
-
-module.exports = {
-  employees: employees
-};
